# aws-ec2-power-switcher

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
aws_ec2_power_switcher/: aws_ec2_power_switcher_stack.py
lambda_func/: .serverless-wsgi  serve.py
lambda_func/ec2_control/: api.py
tests/unit/: test_aws_ec2_power_switcher_stack.py
