[tool.poetry]
name = "aws-ec2-power-switcher"
version = "0.1.0"
description = ""
authors = ["ShengChih"]
license = "MIT"
readme = "README.md"
packages = [{include = "aws_ec2_power_switcher"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
