[tool.poetry]
name = "aws-ec2-power-switcher"
version = "0.1.0"
description = ""
authors = ["ShengChih"]
license = "MIT"
readme = "README.md"
packages = [{include = "aws_ec2_power_switcher"}]

[tool.poetry.dependencies]
python = "^3.7"
aws-cdk-lib = "^2.45.0"
constructs = "^10.1.124"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
